Upgrade to Gradle 8.10.2 and Java 17
./gradlew wrapper --gradle-version=8.10.2